--- a/_posts/2016-04-05-Complex-Time-Series.html
+++ b/_posts/2016-04-05-Complex-Time-Series.html
@@ -718,6 +718,43 @@ plt.show()
 </pre>
 <!--Created using ToHtml.com on 2019-01-15 03:20:55 UTC -->
 
+<p><img src='/ts_challenge_images/output_25_1.png' /></p>
+
+<p><img src='/ts_challenge_images/output_25_2.png' /></p>
+
+<pre>
+    SSE : 1910499966.56
+    Baseline:  [  8.53079581e+09]
+    SSE:  1910499966.56
+    SST:  8530795814.65
+    R^2:  0.776046689187
+</pre>
+
+<p><img src='/ts_challenge_images/output_25_4.png' /></p>
+
+<p><img src='/ts_challenge_images/output_25_5.png' /></p>
+
+[[  7.88822225e+03]
+ [ -1.04772341e+01]
+ [  5.49537731e+01]
+ [ -4.71633832e+01]
+ [ -1.78556064e+01]
+ [  1.31883444e+03]
+ [ -5.94631183e+18]
+ [ -2.32539453e+03]
+ [  1.42930303e+03]
+ [ -1.70801754e+03]
+ [  1.13000291e+03]
+ [ -1.29585954e+00]
+ [  2.77521502e-02]]
+
+<pre>
+    SSE:  1160469260.63
+    SST:  2424981317.62
+    R^2:  0.521452288231
+    Baseline:  2424981317.62
+</pre>
+
 <p>Results</p>
 <p>The regression model on the training dataset had an R-Squared value of 0.78 with 9 predictor variables. The residual are evenly distributed around zero with a two large outliers. </p>
 <p>The validation dataset had an R-Squared of 0.52. The validation dataset residuals have many outliers compared the the training dataset residuals. In addition, there is a slight downward trend which suggests that a variable might be left out of the model.</p>
