--- a/_posts/2016-04-05-Complex-Time-Series.html
+++ b/_posts/2016-04-05-Complex-Time-Series.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "DSC Complex Time Series Challenge"
+title:  "DataScienceCentral.com - Complex Time Series Challenge"
 date: 2015-04-05 12:00:00
 author: Rohan Kotwani
 excerpt: "How signal processing can be used to find seasonality in complex time-series."
