add pixel shift motion correction

--- a/2017-02-09-Pixel-Shift-Motion-Correction.html
+++ b/2017-02-09-Pixel-Shift-Motion-Correction.html
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:  "PhotoCoco"
+title:  "Real-Time Motion Correction— Pixel Shift — iOS"
 date: 2017-09-20 12:00:00
 author: Rohan Kotwani
 excerpt: "PhotoCoco - Automated & quick photo taking"
@@ -8,23 +8,16 @@ tags:
 - iOS
 - Automation
 - Camera
-- PhotoCoco
+- Motion Correction
 
 ---
 
 
 <head>
-
+Real-Time Motion Correction— Pixel Shift — iOS
 </head>
 
 <body>
-    
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/bAHusBSMAac" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    
-    <h3>
-        About PhotoCoco
-    </h3>
-
 
 <p>The objective is to implement a motion correction algorithm for lateral movements in real-time on an iOS device. Lateral movements and rotational movements around the x, y and z axes are shown in Figure 1. with respect to the camera phone.</p>
 
