add Autoregressive Models with TensorFlow

--- a/_posts/2017-02-16-AutoRegressive-Models-with-TensorFlow.html
+++ b/_posts/2017-02-16-AutoRegressive-Models-with-TensorFlow.html
@@ -1,12 +1,13 @@
 ---
 layout: post
-title:  "Auto Regressive Models with TensorFlow"
+title:  "Autoregressive Models with TensorFlow"
 date: 2019-02-16 12:00:00
 author: Rohan Kotwani
-excerpt: "PMT and FGPA simulation of 2-photon microscope scanning hardware"
+excerpt: "A simple autoregressive model implentation using tensorflow"
 tags: 
 - TensorFlow
 - Time Series
+- Autoregressive Models
 
 ---
 
